# Dsprout

./: .gitignore  PROJECT_FLOW_PRESENTATION.md  PROJECT_STATE.md  README.md  RUNBOOK.md  start_dsprout.sh  stop_dsprout.sh
app/: next.config.ts  package-lock.json
app/app/: globals.css  layout.tsx  page.module.css  page.tsx
app/app/agent/: page.tsx
app/app/contributors/: page.tsx
app/app/files/: page.tsx
app/app/files/download/: page.tsx
app/app/files/download/file/: route.ts
app/app/files/upload/: page.tsx
app/app/workers/: page.tsx
app/app/workers/[worker_id]/: page.tsx
app/lib/: satellite.ts
server/: Cargo.toml
server/dsprout-agent/: Cargo.toml
server/dsprout-agent/src/: main.rs
server/dsprout-common/: Cargo.toml
server/dsprout-common/src/: crypto.rs  hash.rs  identity.rs  lib.rs  models.rs  pnet.rs  sharding.rs
server/dsprout-common/src/net/: hello.rs  mod.rs
server/dsprout-satellite/: Cargo.toml
server/dsprout-satellite/src/: main.rs
server/dsprout-uplink/: Cargo.toml
server/dsprout-uplink/src/: main.rs
server/dsprout-worker/: Cargo.toml
server/dsprout-worker/src/: main.rs  store.rs
