[package]
name = "dsprout-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
dsprout-common = { path = "../dsprout-common" }
urlencoding = "2"
