[package]
name = "dsprout-satellite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dsprout-common = { path = "../dsprout-common" }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
