[package]
name = "dsprout-uplink"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
dsprout-common = { path = "../dsprout-common" }
libp2p = { version = "0.54", features = ["identify", "request-response", "macros", "tokio"] }
futures = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
